--- a/05-comment.html
+++ b/05-comment.html
@@ -11,9 +11,13 @@
 
 
     <script>
-        console.log("Bu bir internal script tir");
-        console.warn("Bu bir internal script tir");
-        console.error("Bu bir internal script tir");
+        // alert ile kullanıcya bilgi veririz.
+        alert("Silmeye yetkiniz yok");
+
+        /*
+        confirm("Silmek istediğinizden emin misiniz?");
+        prompt("Adınızı giriniz");
+        */
     </script>
 </body>
 </html>
