--- a/01-internal-script.html
+++ b/01-internal-script.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
+    <h1>Hello world</h1>
 
-<h1>Hello World</h1>
 
-<script>
- console.log("bu bir internal scripttir");
-</script>
- 
+    <script>
+        console.log("Bu bir internal script tir");
+    </script>
 </body>
 </html>
