--- a/04-alert-confirm-prompt.html
+++ b/04-alert-confirm-prompt.html
@@ -11,9 +11,9 @@
 
 
     <script>
-        console.log("Bu bir internal script tir");
-        console.warn("Bu bir internal script tir");
-        console.error("Bu bir internal script tir");
+        alert("Silmeye yetkiniz yok");
+        confirm("Silmek istediğinizden emin misiniz?");
+        prompt("Adınızı giriniz");
     </script>
 </body>
 </html>
