--- a/06-data-types.html
+++ b/06-data-types.html
@@ -1,21 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
+    
 
-<h1>Hello World</h1>
+    <script>
+        var adi = "Ali";
+        console.log(adi);
+        console.log(typeof(adi));
 
-<script>
-var adi="aLi";
-console.log(adi);
-console.log(typeof(adi));
+        var yas = 21;
+        console.log(yas);
+        console.log(typeof(yas));
 
+        var student = {};
+        console.log(typeof(student));
 
-</script>
+        var salary;
+        console.log(salary);
+        console.log(typeof(salary));
+
+        var yas = 35;
+        console.log(yas);
+
+        yas = "Ali";
+        console.log(yas);
+
+        var yas = "35";
+        console.log(typeof(yas));
+
+    </script>
 </body>
 </html>
