--- a/replit.html
+++ b/replit.html
@@ -9,6 +9,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
+   
     <style>
         .container1 {
             margin-left: 10px;
@@ -89,7 +90,7 @@
     <tr>
        
         <td colspan="2">Average</td>
-        <td>0</td>
+        <td id="not">0</td>
         <td>***</td>
     </tr>
 </tfoot>
